--- a/components/rooms/Sidebar/DeleteRoom/index.module.css
+++ b/components/rooms/Sidebar/DeleteRoom/index.module.css
@@ -5,6 +5,7 @@
     background-color: rgb(179, 115, 86);
     cursor: pointer;
     transition: 0.1s;
+    border-radius: 4px;
 }
 
 .button:hover {
