--- a/app/(dashboard)/rooms/[id]/page.module.css
+++ b/app/(dashboard)/rooms/[id]/page.module.css
@@ -1,3 +1,14 @@
 .container {
     display: flex;
 }
+
+.error-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    font-size: 18px;
+    padding: 0 10px;
+    font-weight: bold;
+}
