--- a/app/(dashboard)/users/page.module.css
+++ b/app/(dashboard)/users/page.module.css
@@ -4,3 +4,26 @@
     display: flex;
     flex-direction: column;
 }
+
+.user {
+    margin: 10px 0;
+}
+
+.heading {
+    border-bottom: 1px solid #414141;
+    padding-bottom: 10px;
+}
+
+.list-wrapper {
+    flex: 1;
+    position: relative;
+}
+
+.list {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow-y: auto;
+}
