--- a/components/navbars/index.module.css
+++ b/components/navbars/index.module.css
@@ -4,19 +4,29 @@
     flex-direction: column;
 }
 
+.main-buttons {
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
 .main-button {
     color: #a1a1a1;
     background-color: rgb(10, 60, 70);
     font-size: 20px;
     margin: 0;
-    margin-bottom: 20px;
     padding: 15px 0;
-    border-radius: 0 0 20px 20px;
     text-align: center;
     text-decoration: none;
     font-weight: bold;
     border: none;
+    margin-bottom: 1px;
     cursor: pointer;
+}
+
+.main-button:last-child {
+    border-radius: 0 0 20px 20px;
+    margin-bottom: 0;
 }
 
 .main-button:hover,
