--- a/app/(dashboard)/users/[id]/page.module.css
+++ b/app/(dashboard)/users/[id]/page.module.css
@@ -35,6 +35,7 @@
     text-decoration: none;
     padding: 20px 0;
     border-bottom: 1px solid #414141;
+    transition: 0.1s;
 }
 
 .room-link:hover {
