--- a/components/general/UserBox/index.module.css
+++ b/components/general/UserBox/index.module.css
@@ -1,20 +1,18 @@
 .box {
     display: inline-flex;
     align-items: center;
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
+    word-break: break-all;
+    transition: 0.1s;
+}
+
+.box:hover {
+    color: rgb(206, 197, 197);
 }
 
 .box > img {
     border-radius: 50%;
     margin-right: 10px;
-}
-
-.box > a {
-    color: white;
-    text-decoration: none;
-    font-weight: 500;
-    word-break: break-all;
-}
-
-.box > a:hover {
-    color: rgb(206, 197, 197);
 }
