--- a/components/rooms/Sidebar/index.module.css
+++ b/components/rooms/Sidebar/index.module.css
@@ -85,14 +85,8 @@
     overflow-y: auto;
 }
 
-.member-container {
-    margin: 30px 0;
-    display: flex;
-    flex-direction: column;
-}
-
-.member-container:first-of-type {
-    margin-top: 10px;
+.members-heading {
+    margin-bottom: 15px;
 }
 
 @media (max-width: 900px) {
