Update CSS styles for responsive design

--- a/app/(dashboard)/users/[id]/page.module.css
+++ b/app/(dashboard)/users/[id]/page.module.css
@@ -36,6 +36,7 @@
     padding: 20px 0;
     border-bottom: 1px solid #414141;
     transition: 0.1s;
+    word-break: break-all;
 }
 
 .room-link:hover {
