--- a/components/general/MainSidebar/index.module.css
+++ b/components/general/MainSidebar/index.module.css
@@ -1,6 +1,5 @@
 .container {
     padding: 100px 50px 50px 50px;
-    flex: 1;
     display: flex;
     flex-direction: column;
     transition: 0.3s;
@@ -66,11 +65,28 @@
         position: fixed;
         z-index: 3;
         min-height: 100vh;
+        overflow-y: scroll;
     }
     .toggle {
         display: block;
     }
     .open {
         left: 0;
+    }
+}
+
+/* for devices up to 350px */
+@media (max-width: 350px) {
+    .container {
+        padding: 100px 20px 20px 20px;
+    }
+    .buttons {
+        flex-direction: column;
+    }
+    .buttons > button:first-child {
+        border-top-right-radius: 20px;
+    }
+    .buttons > button:last-child {
+        border-top-right-radius: 0;
     }
 }
