--- a/components/rooms/MessagesContainer/MessagesList/index.module.css
+++ b/components/rooms/MessagesContainer/MessagesList/index.module.css
@@ -1,8 +1,23 @@
 .container {
     flex: 1;
+    display: flex;
+    flex-direction: column;
     overflow-y: auto;
     padding-bottom: 30px;
     word-break: break-all;
+}
+
+.not-accepted,
+.no-messages {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    font-size: 20px;
+    padding: 0 10px;
+    font-weight: bold;
+    word-break: break-word;
 }
 
 .message {
