--- a/components/rooms/MessagesContainer/index.module.css
+++ b/components/rooms/MessagesContainer/index.module.css
@@ -1,6 +1,19 @@
+.wrapper {
+    flex: 1;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
 .container {
     padding: 100px 50px 50px 50px;
     box-sizing: border-box;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow-y: auto;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -9,5 +22,12 @@
 @media (max-width: 700px) {
     .container {
         padding: 100px 20px 20px 20px;
+    }
+}
+
+@media (max-height: 550px) {
+    .container {
+        padding-top: 0;
+        margin-top: 100px;
     }
 }
