--- a/components/auth/DeleteUserButton/DeleteUser/index.module.css
+++ b/components/auth/DeleteUserButton/DeleteUser/index.module.css
@@ -1,7 +1,5 @@
 .button {
-    max-width: 180px;
     width: 100%;
-    align-self: center;
     padding: 10px;
     border: none;
     border-radius: 5px;
@@ -25,4 +23,9 @@
     background-color: rgb(191, 191, 191);
     color: rgb(127, 127, 127);
     cursor: not-allowed;
+}
+
+.sure {
+    text-align: center;
+    margin-bottom: 20px;
 }
