--- a/components/navbars/NavbarRooms/CreateNewRoomButton/CreateRoom/index.module.css
+++ b/components/navbars/NavbarRooms/CreateNewRoomButton/CreateRoom/index.module.css
@@ -1,13 +1,13 @@
 .form {
-    max-width: 300px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 
 .name {
-    width: 100%;
     box-sizing: border-box;
     padding: 10px 20px;
-    margin: 20px 0 10px 0;
     background-color: rgb(24, 24, 28);
     transition: 0.1s;
     color: whitesmoke;
@@ -35,11 +35,9 @@
 
 .submit {
     border: none;
-    width: 100%;
     padding: 10px 20px;
     cursor: pointer;
     color: white;
-    margin-top: 10px;
     transition: 0.1s;
     border-radius: 4px;
 }
