--- a/app/(dashboard)/page.module.css
+++ b/app/(dashboard)/page.module.css
@@ -5,20 +5,21 @@
 .heading {
     border-bottom: 1px solid #414141;
     padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
-.link-wrapper {
+.list-item-wrapper {
     font-size: 22px;
     font-weight: bold;
-    margin-top: 13px;
+    color: rgb(255, 187, 187);
 }
 
-.link-wrapper > a {
+.list-item-wrapper > a {
     text-decoration: none;
     color: rgb(255, 187, 187);
     transition: 0.1s;
 }
 
-.link-wrapper > a:hover {
+.list-item-wrapper > a:hover {
     color: rgb(255, 255, 255);
 }
