--- a/components/rooms/MessagesContainer/MessagesList/index.module.css
+++ b/components/rooms/MessagesContainer/MessagesList/index.module.css
@@ -34,6 +34,17 @@
 
 .message {
     margin-top: 30px;
+    padding-right: 10px;
+}
+
+.message-top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.message-date {
+    color: rgb(206, 206, 206);
 }
 
 .delete,
@@ -74,6 +85,16 @@
     }
     100% {
         transform: rotate(360deg);
+    }
+}
+
+@media (max-width: 400px) {
+    .message-top {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .message-date {
+        margin: 0 0 10px 60px;
     }
 }
 
