--- a/components/rooms/MessagesContainer/MessagesList/index.module.css
+++ b/components/rooms/MessagesContainer/MessagesList/index.module.css
@@ -72,7 +72,20 @@
 
 .image {
     margin-top: 10px;
-    max-width: 100%;
+    border-radius: 4px;
+    max-width: 400px;
+    width: 100%;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.image:hover {
+    filter: brightness(1.3);
+}
+
+.modal-image {
+    max-width: 1000px;
+    max-height: 100vh;
 }
 
 .message-loading-spin {
