--- a/components/auth/DemoLoginButton/index.module.css
+++ b/components/auth/DemoLoginButton/index.module.css
@@ -8,7 +8,7 @@
     transition: 0.1s;
     background-color: #3b3434;
     color: white;
-    font-weight: 500;
+    font-weight: bold;
     cursor: pointer;
     display: flex;
     justify-content: center;
