--- a/components/navbars/NavbarRooms/CreateNewRoomButton/CreateRoom/index.module.css
+++ b/components/navbars/NavbarRooms/CreateNewRoomButton/CreateRoom/index.module.css
@@ -13,7 +13,7 @@
     color: whitesmoke;
     border: none;
     box-shadow: 0 0 1px grey;
-    font-weight: 500;
+    font-weight: bold;
     border-radius: 4px;
 }
 
