--- a/components/rooms/MessagesContainer/CreateMessage/index.module.css
+++ b/components/rooms/MessagesContainer/CreateMessage/index.module.css
@@ -26,7 +26,7 @@
     padding: 7px;
     background-color: inherit;
     border-top-left-radius: 25px;
-    font-weight: 500;
+    font-weight: bold;
     color: whitesmoke;
     border-bottom-left-radius: 25px;
 }
