--- a/components/auth/GithubLoginButton/index.module.css
+++ b/components/auth/GithubLoginButton/index.module.css
@@ -8,7 +8,7 @@
     transition: 0.1s;
     background-color: rgb(28, 28, 31);
     color: white;
-    font-weight: 500;
+    font-weight: bold;
     cursor: pointer;
     display: flex;
     justify-content: center;
