--- a/components/auth/GoogleLoginButton/index.module.css
+++ b/components/auth/GoogleLoginButton/index.module.css
@@ -8,7 +8,7 @@
     transition: 0.1s;
     color: rgb(0, 0, 0);
     background-color: whitesmoke;
-    font-weight: 500;
+    font-weight: bold;
     cursor: pointer;
     display: flex;
     justify-content: center;
