--- a/components/general/Loading/index.module.css
+++ b/components/general/Loading/index.module.css
@@ -5,22 +5,15 @@
     flex: 1;
 }
 
-.loading {
-    font-size: 50px;
-    animation-name: wiggle;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
+.spinner {
+    animation: spin 1s linear infinite;
 }
 
-@keyframes wiggle {
+@keyframes spin {
     0% {
         transform: rotate(0deg);
     }
-    50% {
-        transform: rotate(3deg);
-    }
     100% {
-        transform: rotate(0deg);
+        transform: rotate(360deg);
     }
 }
