--- a/components/general/UserBox/index.module.css
+++ b/components/general/UserBox/index.module.css
@@ -3,7 +3,7 @@
     align-items: center;
     color: white;
     text-decoration: none;
-    font-weight: 500;
+    font-weight: bold;
     word-break: break-all;
     transition: 0.1s;
 }
